Apache SIS Change Log
======================
Release 0.1-incubating (Current Development)

* SIS-19 QTreeWriter and GeoRSSData.save don't check to make sure 
  the directory exists before creating data there (mattmann)

* SIS-18 demo JSP has incorrect form get action set (mattmann)

* SIS-17 Context params need override set to false (mattmann)

* SIS-16 SIS location service is configured incorrectly (mattmann)

* SIS-12 Write basic SIS documentation for CLI and for WS layer (mattmann)

* SIS-14 Use LatLon class instead of plain double points in QuadTreeData interface (greddin, mattmann)

* SIS-15 Bake in Demo JSP page for initial release (mattmann, nchung)

* SIS-3 Refactor SIS (Nga Chung, mattmann)

* SIS-7 Top level pom for SIS (mattmann)

* SIS-5 Website logo (mattmann)

* SIS-2 Stand up SIS website (mattmann)

* SIS-6 Create DOAP file for projects.a.o (mattmann)

* SIS-4 Add test data (pjaol)

* SIS-1 Import LocalLucene (mattmann)